# benchy

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG_CLOUD_PROVIDERS.md  CLAUDE.md  COMPILER-PLAN.md  CONTRIBUTING.md  MODEL_TESTING.md  MULTI-BENCHMARK-PLAN.md  Makefile  QUICK_START_CLOUD.md  README.md  REFACTOR_CHECKLIST.md  REFACTOR_SUMMARY.md  WORLD_MODEL.md  batch_config.yaml  batch_runner.py  benchy_rethink_and_expand.md  coREADME.md  compiler-layer-engineer.md  compiler-walkthrough.md  config_loader.py  docker-compose.yml  download_models.sh  env.example  eval.py  fix_schemas.py  latam.tasks  main.py  notes.txt  pending.txt  pyproject.toml  run_batch.py  run_detached.sh  run_models.sh  setup.sh  start-zenml.sh  tasks.md  test.py  test_anthropic.py  (+8 more)
.agent/skills/: README.md
.github/PULL_REQUEST_TEMPLATE/: submission.md
.github/scripts/: issue_eng_review.py
.github/workflows/: ci.yml  issue-eng-review.yml  publish-submission.yml
.plans/: WORKSHOP-BENCHMARKS-PLAN.md
.workshop/: README.md  SKILLS-INDEX.md
.workshop/assets/: together_modelA.yaml.template  together_modelB.yaml.template  together_modelC.yaml.template  workshop_extraction_extract.py.example  workshop_extraction_metadata.yaml.example
.workshop/parts/: part1-define-benchmark.md  part2-benchmark-together.md  part3-submit-to-latamboard.md
benchmarks/: action.yaml  email-extraction.yaml  email-request.yaml  form-extraction.yaml  holi.yaml  my-benchmark.yaml  request-by-email.yaml  risk-classification.yaml
configs/: Kimi-VL-A3B-Instruct.yaml  Llama-3.1-8B-Instruct.yaml  Llama-3.2-3B-Instruct.yaml  Qwen3-4B-Instruct-2507.yaml  bloomz-7b1.yaml  c4ai-command-r7b-12-2024.yaml  config-template.yaml  config.yaml  example-with-limit.yaml  gemma-e2b.yaml  gemma-e4b.yaml  gemma3n2.yaml  model-1-qwen-4b-instruct-2507.yaml  model-2-1-gemma-e2b.yaml  model-2-2-gemma-24b.yaml  models  pipeline_test.yaml  test-gemma.yaml  test-model.yaml
configs/models/: CohereLabs_aya-vision-8b_single.yaml  Hermes-3-Llama-3.1-8B.yaml  NousResearch_Hermes-4-14B_two.yaml  Qwen_Qwen3-VL-4B-Instruct_single.yaml  Qwen_Qwen3-VL-8B-Instruct_two.yaml  README_OPENAI_MODELS.md  Seed-X-Instruct-7B.yaml  Yi-1.5-6B-Chat.yaml  Yi-1.5-9B-Chat.yaml  alibaba_qwen3-vl-32b-instruct.yaml  anthropic_claude_haiku.yaml  aya8b.yaml  canary-1b-flash-transformers.yaml  (+32 more)
docs/: CLI_DATASET_USAGE.md  CLOUD_PROVIDERS.md  DATASET_SPEC.md  GENERATION_CONFIG.md  GENERATION_CONFIG_IMPLEMENTATION.md  HANDLER_SYSTEM_GUIDE.md  MODEL_TESTING_AUTOMATION.md  MODULAR_TASK_SYSTEM.md  NEW_USER_BENCHMARK_GAPS.md  SCORING.md  SECOND_LAYER_DESIGN.md  TRANSLATION_METRICS_UPDATE.md  VLLM_VERSION_MANAGEMENT.md  architecture.md  benchy_probe_contract.md  contribute_tasks.md  contributing_providers.md  evaluating_models.md  explanation-architecture.md  how-to-transcription-benchmark.md  integration-guide.md  reference-cli.md  reference-config.md  reference-output-artifacts.md  reference-tasks.md  testing.md  tutorial-getting-started.md
facturas/: .gitignore
misc/: README.md  smolvlm_focus_expected.json
reference/: tasks_groups.json  tasks_list.json
scripts/: README.md  check_disk_space.py  generate_dataset_subsets.py  manage_vllm_venvs.py  run_asr_panel.py  setup-venvs.sh  smoke_test_compiler.py  validate_run.py
src/: __init__.py  batch_pipeline.py  benchmark_compiler.py  benchy_cli.py  benchy_cli_eval.py  benchy_cli_probe.py  benchy_create.py  config_loader.py  config_manager.py  data_generator.py  generation_config.py  gpu_config.py  logging_utils.py  outcome.py  pipeline.py  prefect_compat.py  run_id_manager.py  signal_utils.py  steps.py  task_completion_checker.py
test_image_request/: prompt.txt  test.py
tests/: conftest.py  fixtures.py  test_adapters_base.py  test_adapters_canary_nemo.py  test_adapters_connection.py  test_adapters_qwen3_asr_chat.py  test_adapters_registry.py  test_adapters_voxtral_chat.py  test_audio_preprocessing.py  test_benchmark_runner.py  test_benchy_cli_probe.py  test_cli_arguments.py  test_cli_integration.py  test_compiler.py  test_config_generator.py  test_config_loader.py  test_connection.py  test_data_generator.py  test_dataset_adapters.py  test_dataset_loaders.py  test_dataset_utils.py  test_facturas_argentinas_dataset_id.py  test_field_diagnostics_report.py  test_fleurs_subtasks.py  test_group_runner.py  test_handlers_base.py  test_handlers_freeform.py  test_handlers_multiple_choice.py  test_handlers_structured.py  test_image_preprocessing.py  test_metrics_choice.py  test_metrics_extended.py  test_multimodal_structured.py  test_openai_audio_interface.py  test_outcome.py  test_pipeline_summary.py  test_probe_runner.py  test_protocols.py  test_registry_adhoc.py  test_retry.py  (+11 more)
(+368 files in other folders)
