[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[project]
name = "benchy"
version = "0.1.0"
description = "LATAMBoard benchmarking suite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0.0",
    "requests>=2.25.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "huggingface-hub>=0.20.0",
    "vllm>=0.13.0; sys_platform == 'linux'",
    "timm",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=0.1.0",
    "datasets>=2.14.0",
    "jsonschema>=4.19.0",
    "python-Levenshtein>=0.21.0",
    "scipy>=1.9.0",
    "numpy>=1.24.0",
    "rapidfuzz>=3.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.56.2",
    "prefect>=3.4.19",
    "pillow>=12.1.0",
]

[project.scripts]
benchy = "src.benchy_cli:main"

[project.optional-dependencies]
prefect = [
    "prefect>=3.4.19",
]
translation = [
    "sacrebleu>=2.3.0",
    "unbabel-comet>=2.0.0"
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "coverage>=7.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F", "E9"]
